--- a/cv.html
+++ b/cv.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles/cv.css">
-    <title>Document</title>
+    <title>hoja de vida Jessica</title>
 </head>
 <body>
     <div class="container-xl">
